Updated catalogs and price tables

--- a/app/src/main/res/layout/activity_catalogos.xml
+++ b/app/src/main/res/layout/activity_catalogos.xml
@@ -166,6 +166,31 @@
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/btnToyotomiCat"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:layout_rowWeight="1"
+                            app:cardElevation="6dp"
+                            app:cardCornerRadius="12dp"
+                            android:layout_margin="12dp">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:orientation="vertical"
+                                    android:padding="16dp"
+                                    android:gravity="center">
+                                        <ImageView
+                                            android:src="@drawable/toyotomilogo"
+                                            android:layout_width="80dp"
+                                            android:layout_height="80dp" />
+
+
+                                </LinearLayout>
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/btnLgPrice"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -437,6 +462,27 @@
                                 </LinearLayout>
                         </androidx.cardview.widget.CardView>
 
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/btnWigam"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:layout_rowWeight="1"
+                            app:cardElevation="6dp"
+                            app:cardCornerRadius="12dp"
+                            android:layout_margin="12dp">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:orientation="vertical"
+                                    android:padding="16dp"
+                                    android:gravity="center">
+                                        <ImageView
+                                            android:src="@drawable/wigamlogo"
+                                            android:layout_width="80dp"
+                                            android:layout_height="80dp" />
+                                </LinearLayout>
+                        </androidx.cardview.widget.CardView>
 
                 </GridLayout>
 
