--- a/app/src/main/res/layout/activity_daikin_catalog.xml
+++ b/app/src/main/res/layout/activity_daikin_catalog.xml
@@ -89,6 +89,27 @@
         tools:ignore="MissingConstraints" />
 
     <Button
+        android:id="@+id/btnAquec"
+        android:layout_width="268dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="#02a2ca"
+        android:text="Aquecimento"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.74"
+        tools:ignore="MissingConstraints" />
+
+    <Button
 
         android:id="@+id/btnMulti"
         android:layout_width="269dp"
