--- a/app/src/main/res/layout/activity_dom_daikin.xml
+++ b/app/src/main/res/layout/activity_dom_daikin.xml
@@ -25,6 +25,38 @@
             android:rowCount="3">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/btnGeralDaikin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="12dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="6dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/daikin" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tabelaNome"
+                        android:text="Catálogo Geral"
+                        android:textColor="#000"
+                        android:textSize="14sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:id="@+id/btnUruru"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
